# serverless-lambda-function-name-enum-python

./: .gitignore  LICENCE  Makefile  README.md  pyproject.toml  usage.md
.github/: on-tag-push.yml
.github/workflows/: pypi-publish.yml
docs/: usage.md
ptmpdy/: cli.py  main.py
tests/: __init__.py  test_cli.py  test_main.py
tests/data/: serverless.yml
